feat: :sparkles: build to apt repo and use github workflow
